fixed overflowing video tiles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,7 +36,7 @@ video {
     left: 200px;
     position: absolute;
     display: inline-block;
-    width: 100%;
+    width: calc(100% - 200px);
     height: 100%;
 }
 
